objects/BMCServiceDesk__CMDB_AttributeDefinition__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__AttributeID__c</fullName>
        <externalId>true</externalId>
        <label>AttributeID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AttributeName__c</fullName>
        <label>AttributeName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AttributeType__c</fullName>
        <label>AttributeType</label>
        <picklist>
            <picklistValues>
                <fullName>REGULAR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL_CORE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassID__c</fullName>
        <label>ClassID</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>CMDB_AttributeDefinitions</relationshipLabel>
        <relationshipName>CMDB_AttributeDefinitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassName__c</fullName>
        <formula>BMCServiceDesk__ClassID__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClassName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CustomProperty__c</fullName>
        <label>CustomProperty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DataType__c</fullName>
        <label>DataType</label>
        <picklist>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Character</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachment Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachment Pool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EntryMode__c</fullName>
        <label>EntryMode</label>
        <picklist>
            <picklistValues>
                <fullName>Display Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnumType__c</fullName>
        <label>EnumType</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldID__c</fullName>
        <label>FieldID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Hidden__c</fullName>
        <label>Hidden</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>InstanceID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxLength__c</fullName>
        <label>MaxLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Precision__c</fullName>
        <label>Precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrimaryKey__c</fullName>
        <label>PrimaryKey</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Values__c</fullName>
        <label>Values</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>